fix: color of scrollbar

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -358,17 +358,17 @@ summary{
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: transparent; 
   border-radius: 10px;
 }
  
 ::-webkit-scrollbar-thumb {
-  background: #006094; 
+  background: white; 
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #003F61;
+  background: #d3d3d3;
 }
 
 /* HELPING CLASSES */
